src/web/static/css/base.css
@font-face {
    font-family: "AtkinsonHyperlegibleNextVF";
    src: url("/static/fonts/AtkinsonHyperlegibleNextVF-Variable.woff2") format("woff2"),
            url("/static/fonts/AtkinsonHyperlegibleNextVF-Variable.ttf") format("truetype");
    font-weight: 400 900;
    font-style: normal;
}

* {
	font-family: AtkinsonHyperlegibleNextVF, sans-serif;
}

body {
	background-repeat: no-repeat;
	background-position: center center;
	background-size: contain;
	background-attachment: fixed;
	overflow: auto !important;
}

#main-wrapper {
    display: flex;
    flex-direction: row;
}

.sidebar {
    position: sticky;
    top: 0;
    left: 0;
    width: var(--side-bar-width);
    min-width: var(--side-bar-width);
    min-height: var(--vh, 100vh);
    background-color: var(--pw-nav-bg);
    z-index: 5;
}

.compact-sidebar #main-wrapper {
    --side-bar-width: 50px;
}

body[data-bs-theme="light"] #main-wrapper {
    --side-bar-width: 0px;
}

.sidebar-divider {
    height: 1px;
    width: 100%;;
    background-color: var(--bs-border-color);
}

.sidebar .dropdown-arrow {
    display: inline-block;
    transition: transform .35s ease;
    transform-origin: .5em 50%;
}

.sidebar .back-icon {
    font-size: 1.25rem;
}

.sidebar button > i, .sidebar button > div > i {
    padding-right: 0.25rem;
}

.sidebar-tooltip {
    width: 100%;
}

.sidebar button > i.indented {
    padding-left: 0.75rem;
}

.compact-sidebar .sidebar button > i, .compact-sidebar .sidebar button > i.indented {
    font-size: 1rem;
    padding-left: 0;
    padding-right: 0;
}

.sidebar .btn-toggle[aria-expanded="true"] .dropdown-arrow{
    transform: rotate(90deg);
}

.sidebar h4 {
    color: var(--bs-primary);
}

.compact-sidebar .sidebar h4, .compact-sidebar .sidebar .expanded-only {
    display: none;
}

.sidebar .compact-only {
    display: none;
}

.compact-sidebar .sidebar .compact-only {
    display: block;
}

.sidebar .nav-link {
    width: 100%;
    max-width: 100%;
}

.sidebar .nav-link:hover, .sidebar .btn-link:hover {
    background-color: var(--bs-body-bg);
    color: var(--bs-nav-hover-color);
}

.sidebar .nav-link.active, .sidebar .nav-link.active:hover {
    background-color: var(--bs-primary);
    color: var(--bs-body-bg);
}

#sidebar-expander {
    display: none;
    position: fixed;
    bottom: 30px;
    left: calc(var(--side-bar-width) - 13px);
    border-radius: 1000px;
    height: 24px;
    width: 24px;
    align-items: center;
    justify-content: center;
    background-color: var(--pw-nav-bg);
    border: 1px solid var(--bs-border-color);
    padding: 4px 0 0 0;
    z-index: 11;
}

#sidebar-expander:hover {
    background-color: var(--bs-body-bg);
}

body[data-bs-theme="dark"] #sidebar-expander {
    display: flex;
}

#sidebar-expander i {
    padding: 0;
}

#page-wrapper {
    display: inline-block;
    min-height: calc(var(--vh, 100vh) - 60px);
    min-width: calc(var(--vw, 100vw) - var(--side-bar-width));
}

#top-nav-wrapper {
    position: sticky;
    top: 0;
    min-width: calc(var(--vw, 100vw) - var(--side-bar-width));
    z-index: 4;
    padding: 12px 0;
}

body[data-bs-theme="dark"] #top-nav-wrapper {
    background-color: rgba(var(--bs-body-bg-rgb), 1);
}

#top-nav-content {
    display: flex;
    align-items: center;
    flex-wrap: wrap;
    gap: 0.25rem;
    z-index: 3;
    padding: 0 1rem;
    max-width: calc(var(--vw, 100vw) - var(--side-bar-width));
    position: sticky;
    left: var(--side-bar-width);
}

#copyright-wrapper {
    display: flex;
    flex-grow: 1;
    align-items: flex-end;
    justify-content: center;
    position: sticky;
    left: 0;
    width: calc(var(--vw, 100vw) - var(--side-bar-width));
}

.pw-input-group:has(.is-invalid) ~ .invalid-feedback,
.pw-input-group:has(.is-invalid) ~ .invalid-tooltip {
  display: block;
}

.input-group-text.is-invalid {
    border-color: var(--bs-form-invalid-border-color);
}
.input-group-text.is-valid {
    border-color: var(--bs-form-valid-border-color);
}

.form-control:focus {
  border-color: var(--bs-border-color);
  box-shadow: none;
}

.input-group .form-control:focus {
  outline: none !important;
  box-shadow: none !important;
  border-color: var(--bs-border-color);
}

[data-bs-theme=dark] .input-group:focus-within,
[data-bs-theme=dark] .input-group:has(.select2-container--open) {
    box-shadow: none;
    outline: 0.15rem solid rgba(var(--bs-primary-rgb), 0.70);
    outline-offset: 4px;
    border-radius: var(--bs-border-radius)
}

.is-invalid {
    scroll-margin-top: 40px
}

.nav-underline .nav-link.active, .nav-underline .show > .nav-link {
    font-weight: 400;
}

.section-title {
    display: inline-block;
    background-color: var(--bs-primary);
    padding: .25rem 1.5rem 0.25rem 2rem;
    margin-bottom: 2rem;
    color: var(--pw-contrast-text);
    position: relative;
    border-radius: 0 1000px 1000px 0;
    padding-left: 2rem;
    margin-left: -12px;
    font-size: 1.5rem;
    font-weight: 400;
}

.section-title:has(a > i) {
    padding-right: 0rem;
    margin-right: 3rem;
}

.section-title > a:has(i) {
    position: relative;
    left: 2.5rem;
    top: 0.2rem;
}

.btn-group>span:not(:last-child)>.btn {
    border-top-right-radius: 0;
    border-bottom-right-radius: 0;
}

.htmx-indicator {
    opacity: 0;
    pointer-events: none;
    height: 80px;
    width: 80px;
    display: flex;
    justify-content: center;
    padding: 10px;
    color: #d7c9aa;
    z-index: 2000;
    background-color: rgba(0, 0, 0, 0.8);
    border-radius: 1000px;
}
.input-htmx-indicator {
    height: 1.5em;
    width: 1.5em;
    margin-left: -32px;
    z-index: 3;
    padding: 3px;
}
.with-input-group-indicator .htmx-indicator {
    height: 1.5em;
    width: 1.5em;
    padding: 3px;
    display: none;
}
.with-input-group-indicator > .bi {
    height: 1.5em;
    width: 1.5em;
}
.with-input-group-indicator.htmx-request > .bi {
    display: none;
}
.with-input-group-indicator.htmx-request .htmx-indicator {
    display: flex;
}
/* ... */

